--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,8 +17,8 @@
     <div class="col-sm-4">
       <div class="card">
         <div class="card-block">
-          <h4 class="card-title"><%= @nate.try(:title) %></h4>
-          <p class="card-text"><%= @markdown.render(@nate.try(:body)).html_safe %></p>
+          <h4 class="card-title"><%#= @nate.try(:title) %></h4>
+          <p class="card-text"><%#= @markdown.render(@nate.try(:body)).html_safe %></p>
         </div>
       </div>
     </div>
